Sun Jul  6 11:56:48 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_begin_internal): Move default icon
	creation here, so that we have an icon at the start
	of the drag (e.g., when retrieving the window cache
	information.)

Sun Jul  6 17:21:23 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* docs/widget_geometry.txt: better drawing of GtkMenuItem
	* docs/widget_geometry.txt: add notes about GtkMenu
	* gtk/gtkstyle.c: remove leftover "#include "gtkhandlebox.h""

Sat Jul  5 10:34:00 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkmenu.c: add vertical_padding style property.
	
	* gtk/gtkmenuitem.c: add style properties toggle_spacing,
	arrow_spacing and horizontal_padding. Also center separators and
	make them a bit taller.

	* gtk/*menuitem.c: use new style properties.
	
	* docs/widget_geometry.txt: Add note about GtkMenuItem

	* gtk/gtkstyle.c 
	(gtk_default_draw_vline, gtk_default_draw_hline):
	fix +/-1 errors. 

	(gtk_default_draw_shadow): draw a black border around menus.

	* gtk/gtkvseparator, gtk/gtkhseparator.c, gtk/gtkmenuitem.c: fix
	calls to gtk_paint_hline() and gtk_paint_vline() (they take x1,
	x2 and y1, y2 respectively, not x, width and y, height).

Sat Jul  5 09:55:38 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdnd-x11.c (precache_target_list): Lookup
	all the atoms in the target list at once.

	* gdk/x11/gdkdnd-x11.c (gdk_drag_get_protocol_for_display):
	Local drag short-circuit.

	* gdk/x11/gdkdnd-x11.c (gdk_drag_motion): For the
	local case, poke the actions in directly instead of
	going through xdnd_set_actions.

	* gdk/x11/gdkdnd-x11.c (xdnd_read_actions): Short-circuit
	the local case.

	* gdk/x11/gdkdnd-x11.c (xdnd_manage_source_filter): Don't
	XSelectInput()/add a filter if the drag is local.

	* gdk/x11/gdkdnd-x11.c (gdk_drag_get_selection): 
	Simplify handling of "XdndSelection".

	* gdk/x11/gdkevents-x11.c (gdk_event_send_client_message_to_all_recurse): Somehow, 